--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   color: #f0d9ff;
                   font-size: 20px;
                 "
-                onclick="game()"
+                onclick="gameStart()"
               >
                 Play
               </button>
@@ -217,38 +217,6 @@
                     <button onclick="checkAnswer()" class="btn btn-success btn-lg btn3d" style="padding: 8px 80px;" id="enter">Enter</button>
                 </div>
             </div>  
-        </div>
-        <div class="col-md-5 col-sm-5" style="text-align: center">
-          <div style="padding-bottom: 2px">
-            <button onclick="numeros(1)" class="btn btn-primary btn-lg btn3d" id="one">1</button>
-            <button onclick="numeros(2)" class="btn btn-primary btn-lg btn3d" id="two">2</button>
-            <button onclick="numeros(3)" class="btn btn-primary btn-lg btn3d" id="three">3</button>
-            <button onclick="plus()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 6px 13px">
-              +
-            </button>
-          </div>
-          <div style="padding-bottom: 2px">
-            <button onclick="numeros(4)" class="btn btn-primary btn-lg btn3d" id="four">4</button>
-            <button onclick="numeros(5)" class="btn btn-primary btn-lg btn3d" id="five">5</button>
-            <button onclick="numeros(6)" class="btn btn-primary btn-lg btn3d" id="six">6</button>
-            <button onclick="minus()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px">
-              -
-            </button>
-          </div>
-          <div style="padding-bottom: 2px">
-            <button onclick="numeros(7)" class="btn btn-primary btn-lg btn3d" id="seven">7</button>
-            <button onclick="numeros(8)" class="btn btn-primary btn-lg btn3d" id="eight">8</button>
-            <button onclick="numeros(9)" class="btn btn-primary btn-lg btn3d" id="nine">9</button>
-            <button onclick="" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px">/</button>
-          </div>
-          <div style="padding-bottom: 2x">
-            <button onclick="clearInput()" class="btn btn-danger btn-lg btn3d" style="padding: 8px 25px" id="clear">clear</button>
-            <button onclick="numeros(0)" class="btn btn-primary btn-lg btn3d" id="zero">0</button>
-            <button class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px">*</button>
-          </div>
-          <div>
-            <button class="btn btn-success btn-lg btn3d" style="padding: 8px 80px" id="enter">Enter</button>
-          </div>
         </div>
       </div>
     </div>
