--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <div id="homesn" class="container-fluid row min-vh-100">
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
-                <h1 class="text-center" style="color:#827397; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
+                <!-- <h1 class="text-center" style="color:#827397; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1> -->
+                <img class="img-fluid" src="./images/purplogo.png" alt="MathMATE" style="margin-top: 40px;"/>
                 <div class="d-flex flex-row align-items-center justify-content-center">
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="game()">Play</button>
                     <button class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>    
@@ -127,12 +128,12 @@
                     <button onclick="numeros(7)" class="btn btn-primary btn-lg btn3d" id="seven">7</button>
                     <button onclick="numeros(8)" class="btn btn-primary btn-lg btn3d" id="eight">8</button>
                     <button onclick="numeros(9)" class="btn btn-primary btn-lg btn3d" id="nine">9</button>
-                    <button onclick="" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">/</button>
+                    <button onclick="division()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">/</button>
                 </div>
                 <div style="padding-bottom: 2x;">
                     <button onclick = "clearInput()" class="btn btn-danger btn-lg btn3d" style="padding: 8px 25px; " id="clear">Clear</button>
                     <button onclick = "numeros(0)" class="btn btn-primary btn-lg btn3d" id="zero">0</button>
-                    <button class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px;">*</button>
+                    <button onclick = "multiplication()"class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px;">*</button>
                 </div>
                 <div>
                     <button class="btn btn-success btn-lg btn3d" style="padding: 8px 80px;" id="enter">Enter</button>
