--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
     <div id="homesn" class="container-fluid row min-vh-100">
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
-                <!-- <h1 class="text-center" style="color:#827397; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1> -->
-                <img class="img-fluid" src="./images/purplogo.png" alt="MathMATE" style="margin-top: 40px;"/>
+                <h1 class="text-center" style="color:#827397; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="game()">Play</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="gameStart()">Play</button>
                     <button class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color: #827397; border: 2px solid #4D4C7D; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>    
 
                     <!-- Modal -->
@@ -112,31 +111,31 @@
             <div class="col-md-5 col-sm-5" style="text-align: center;">
                 
                 <div style="padding-bottom: 2px;">
-                    <button onclick="numeros(1)" class="btn btn-primary btn-lg btn3d" id="one">1</button>
-                    <button onclick="numeros(2)" class="btn btn-primary btn-lg btn3d" id="two">2</button>
-                    <button onclick="numeros(3)" class="btn btn-primary btn-lg btn3d" id="three">3</button>
+                    <button onclick="numeros(1)" class="btn btn-primary btn-lg btn3d">1</button>
+                    <button onclick="numeros(2)" class="btn btn-primary btn-lg btn3d">2</button>
+                    <button onclick="numeros(3)" class="btn btn-primary btn-lg btn3d">3</button>
                     <button onclick="plus()" class="btn btn-primary btn-lg btn3d"
                         style="margin-left: 20px; padding: 6px 13px;">+</button>
                 </div>
                 <div style="padding-bottom: 2px;">
-                    <button onclick="numeros(4)" class="btn btn-primary btn-lg btn3d" id="four">4</button>
-                    <button onclick="numeros(5)" class="btn btn-primary btn-lg btn3d" id="five">5</button>
-                    <button onclick="numeros(6)" class="btn btn-primary btn-lg btn3d" id="six">6</button>
+                    <button onclick="numeros(4)" class="btn btn-primary btn-lg btn3d">4</button>
+                    <button onclick="numeros(5)" class="btn btn-primary btn-lg btn3d">5</button>
+                    <button onclick="numeros(6)" class="btn btn-primary btn-lg btn3d">6</button>
                     <button onclick="minus()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">-</button>
                 </div>
                 <div style="padding-bottom: 2px;">
-                    <button onclick="numeros(7)" class="btn btn-primary btn-lg btn3d" id="seven">7</button>
-                    <button onclick="numeros(8)" class="btn btn-primary btn-lg btn3d" id="eight">8</button>
-                    <button onclick="numeros(9)" class="btn btn-primary btn-lg btn3d" id="nine">9</button>
+                    <button onclick="numeros(7)" class="btn btn-primary btn-lg btn3d">7</button>
+                    <button onclick="numeros(8)" class="btn btn-primary btn-lg btn3d">8</button>
+                    <button onclick="numeros(9)" class="btn btn-primary btn-lg btn3d">9</button>
                     <button onclick="division()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">/</button>
                 </div>
                 <div style="padding-bottom: 2x;">
-                    <button onclick = "clearInput()" class="btn btn-danger btn-lg btn3d" style="padding: 8px 25px; " id="clear">Clear</button>
-                    <button onclick = "numeros(0)" class="btn btn-primary btn-lg btn3d" id="zero">0</button>
+                    <button onclick = "clearInput()" class="btn btn-danger btn-lg btn3d" style="padding: 8px 25px;">clear</button>
+                    <button onclick = "numeros(0)" class="btn btn-primary btn-lg btn3d">0</button>
                     <button onclick = "multiplication()"class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px;">*</button>
                 </div>
                 <div>
-                    <button class="btn btn-success btn-lg btn3d" style="padding: 8px 80px;" id="enter">Enter</button>
+                    <button onclick="checkAnswer()" class="btn btn-success btn-lg btn3d" style="padding: 8px 80px;" id="enter">Enter</button>
                 </div>
             </div>  
         </div>
@@ -149,20 +148,13 @@
             <div class="d-flex flex-column align-items-center">
                 <h4 style="border: solid 3px #827397; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
                 <div class="flex-row">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px; color: #F0D9FF;" onclick="gameStart()">Play again</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px; color: #F0D9FF;" onclick="homeMenu()">Play again</button>
                     <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px;color: #F0D9FF">Next level</button>
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
                 <img class="img-fluid" src="./images/emoji.png" alt="emoji" style="margin-top: 40px;"/>
             </div>
-        </div>
-        <div class="col-sm-6">
-          <img
-            class="img-fluid"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Twemoji_1f600.svg/1200px-Twemoji_1f600.svg.png"
-            alt="emoji"
-          />
         </div>
       </div>
     <!-- End screen container end -->
