--- a/index.html
+++ b/index.html
@@ -64,11 +64,18 @@
         }
 
     </style>
+    <style>
+        .btnstl {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #371B58;
+        }
+    </style>
 </head>
 
 <body style="background-color: #F0D9FF;">
     <!-- Home screen container start -->
-    <div id="homesn" class="container-fluid row min-vh-100">
+    <div id="homesn" class="container-fluid row min-vh-100 d-none">
+    <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-center" style="color:#827397; font-size: 12vw; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; ">MathMate</h1>
@@ -102,54 +109,61 @@
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
-    <div id="gamesn" class="container-fluid d-none">
-        <div class="row d-flex flex-column flex-md-row align-items-center justify-content-center">
-            <div class="col-md-5 col-sm-5 align-self-center justify-content-center" style="margin-bottom: 30px;">
-                <h1 style="color:#827397; font-size: 8vw; ">MathMATE</h1>
-                <h2 id="task" style="border: 3px solid #4D4C7D; border-radius: 5px; padding-left: 5px; color: #4D4C7D; font-size: 20px;">Text here!</h2>
+    <div id="gamesn" class="">
+    <!-- <div id="gamesn" class="container-fluid d-none"> -->
+        <div class="row min-vh-100 flex-column align-items-center justify-content-center">
+            <div class="d-flex flex-column flex-sm-row align-items-center">
+                <div class="col d-flex flex-column align-items-center">
+                    <div>
+                        <h1 class="" style="color:#827397; font-size: 8vw; ">MathMATE</h1>
+                        <h2 class="p-2 bg-body box-shadow shadow rounded" id="task" style="color: #4D4C7D; font-size: 20px;">ㅤ</h2>
+                    </div>
+                    
+                </div>
+                <div class="col d-flex flex-column align-items-center">
+                    <div>
+                        <div class="col d-flex flex-row">
+                            <button onclick="numeros(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">1</button>
+                            <button onclick="numeros(2)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">2</button>
+                            <button onclick="numeros(3)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">3</button>
+                            <button onclick="plus()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">+</button>
+                        </div>
+                        <div class="col d-flex flex-row">
+                            <button onclick="numeros(4)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">4</button>
+                            <button onclick="numeros(5)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">5</button>
+                            <button onclick="numeros(6)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">6</button>
+                            <button onclick="minus()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">-</button>
+                        </div>
+                        <div class="col d-flex flex-row">
+                            <button onclick="numeros(7)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">7</button>
+                            <button onclick="numeros(8)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">8</button>
+                            <button onclick="numeros(9)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">9</button>
+                            <button onclick="division()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">/</button>
+                        </div>
+                        <div class="col d-flex flex-row">
+                            <button onclick = "clearInput()" class="col-5 mx-1 btn btn-danger btn-lg btn3d btnstl">clear</button>
+                            <button onclick = "numeros(0)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">0</button>
+                            <button onclick = "multiplication()"class="col mx-1 btn btn-primary btn-lg btn3d btnstl">*</button>
+                        </div>
+                        <div class="col d-flex flex-row">
+                            <button onclick="checkAnswer()" class="col mx-1 btn px-5 btn-success btn-lg btn3d btnstl" id="enter">Enter</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-5 col-sm-5" style="text-align: center;">
-                
-                <div style="padding-bottom: 2px;">
-                    <button onclick="numeros(1)" class="btn btn-primary btn-lg btn3d">1</button>
-                    <button onclick="numeros(2)" class="btn btn-primary btn-lg btn3d">2</button>
-                    <button onclick="numeros(3)" class="btn btn-primary btn-lg btn3d">3</button>
-                    <button onclick="plus()" class="btn btn-primary btn-lg btn3d"
-                        style="margin-left: 20px; padding: 6px 13px;">+</button>
-                </div>
-                <div style="padding-bottom: 2px;">
-                    <button onclick="numeros(4)" class="btn btn-primary btn-lg btn3d">4</button>
-                    <button onclick="numeros(5)" class="btn btn-primary btn-lg btn3d">5</button>
-                    <button onclick="numeros(6)" class="btn btn-primary btn-lg btn3d">6</button>
-                    <button onclick="minus()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">-</button>
-                </div>
-                <div style="padding-bottom: 2px;">
-                    <button onclick="numeros(7)" class="btn btn-primary btn-lg btn3d">7</button>
-                    <button onclick="numeros(8)" class="btn btn-primary btn-lg btn3d">8</button>
-                    <button onclick="numeros(9)" class="btn btn-primary btn-lg btn3d">9</button>
-                    <button onclick="division()" class="btn btn-primary btn-lg btn3d" style="margin-left: 20px; padding: 8px 15px;">/</button>
-                </div>
-                <div style="padding-bottom: 2x;">
-                    <button onclick = "clearInput()" class="btn btn-danger btn-lg btn3d" style="padding: 8px 25px;">clear</button>
-                    <button onclick = "numeros(0)" class="btn btn-primary btn-lg btn3d">0</button>
-                    <button onclick = "multiplication()"class="btn btn-primary btn-lg btn3d" style="margin-left: 16px; padding: 8px 15px;">*</button>
-                </div>
-                <div>
-                    <button onclick="checkAnswer()" class="btn btn-success btn-lg btn3d" style="padding: 8px 80px;" id="enter">Enter</button>
-                </div>
-            </div>  
-        </div>
+        </div>  
     </div>
+</div>
     <!-- Game screen container end-->
 
     <!-- End screen container start-->
-    <div id="endsn" class="d-none">
+    <div id="endsn" class="">
         <div class="row min-vh-100 flex-column align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center">
                 <h4 id="result" style="border: solid 3px #827397; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
                 <div class="flex-row">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px; color: #F0D9FF;" onclick="homeMenu()">Play again</button>
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; width: 20vw; margin-top: 5px;color: #F0D9FF">Next level</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; margin-top: 5px; color: #F0D9FF;" onclick="homeMenu()">Play again</button>
+                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #827397; border: 2px solid #4D4C7D; margin-top: 5px;color: #F0D9FF">Next level</button>
                 </div>
             </div>
             <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
