--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body style="background-color: #F0D9FF;">
     <!-- Home screen container start -->
-    <div id="homesn" class="container-fluid row min-vh-100 d-none">
+    <div id="homesn" class="container-fluid row min-vh-100">
     <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
@@ -109,7 +109,7 @@
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
-    <div id="gamesn" class="">
+    <div id="gamesn" class="d-none">
     <!-- <div id="gamesn" class="container-fluid d-none"> -->
         <div class="row min-vh-100 flex-column align-items-center justify-content-center">
             <div class="d-flex flex-column flex-sm-row align-items-center">
@@ -157,7 +157,7 @@
     <!-- Game screen container end-->
 
     <!-- End screen container start-->
-    <div id="endsn" class="">
+    <div id="endsn" class="d-none">
         <div class="row min-vh-100 flex-column align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center">
                 <h4 id="result" style="border: solid 3px #827397; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
